# curious

./: .gitignore  AGENTS.md  README.md  curious.config.example.json  curious.config.json  package-lock.json  package.json  tsconfig.json
docs/: publish.md  (+1 more)
python/: README.md  curious.config.example.json  pyproject.toml
python/docs/: BACKLOG.md  FLAVORS.md
python/src/curious/: __init__.py  __main__.py  cli.py  config.py  git_branch.py  git_diff.py  git_policy.py  hf_cli.py  llm_resolve.py  orchestrator.py  orchestrator_cycles.py  orchestrator_roadmap.py  overseer.py  project.py  prompts.py  prompts_tasks.py  review_feedback.py  review_verdict.py  scanner_rules.py  spec_history.py  spec_roadmap.py  spec_sections.py  spec_steering.py  spec_validate.py  state.py  trajectory.py  types.py  workflow_policy.py  workspace.py
python/src/curious/commands/: __init__.py  bootstrap.py  roadmap.py  spec_history.py  train.py  train_grpo.py  train_reviewer.py  train_verifier.py  vast_manage.py
python/src/curious/harness/: __init__.py  agent.py  best_of_n.py  git_guard.py  native.py  result.py  smolagents_runner.py  smolagents_tools.py  tool_prompt.py  tools.py
python/src/curious/harvest/: __init__.py  dpo.py  git_join.py  grpo.py  quality.py  reviewer.py  verifier.py
python/tests/: test_device_load.py  test_dpo.py  test_git_branch.py  test_grpo_reward.py  test_harvest_diff.py  test_harvest_grpo.py  test_llm_resolve.py  test_openai_compat.py  test_review_verdict.py  test_spec_roadmap.py  test_spec_validate.py  test_tool_call_parsers.py  test_trajectory.py  test_vast_offers.py
(+85 files in other folders)
